<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">麻辣老师</string>
    <string name="find_teacher">找个老师</string>
    <string name="teacher_list">老师列表</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>

    <string name="signin">登录</string>
    <string name="signout">退出账号</string>
    <string name="register">注册</string>
    <string name="login_phone_no">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_password_confirm">确认密码</string>
    <string name="input_hint_phone_no">请输入手机号</string>
    <string name="input_hint_password">请输入密码</string>

    <string name="hint_login_processing">正在登录...</string>
    <string name="hint_login_success">登录成功</string>
    <string name="hint_login_fail">登录失败</string>
    <string name="prompt_email">电子邮件</string>
    <string name="prompt_password">密码 (可选)</string>
    <string name="action_sign_in">登录或注册</string>

    <string name="error_invalid_email">此电子邮件地址无效</string>
    <string name="error_invalid_password">此密码是太短</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_required">此字段是必需的</string>
    <string name="permission_rationale">"联系人权限需要提供电子邮件完成"。</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_settings">设置</string>

    <string name="title_subject">科目</string>
    <string name="title_grade">年级</string>
    <string name="title_choose_course_address">预约上课地点</string>
    <string name="title_choose_address_type">选择上课方式</string>
    <string name="title_address_type_go_home">老师上门</string>
    <string name="title_address_type_school">学习中心</string>
    <string name="title_choose_school">选择学习中心</string>

    <string name="nav_bar_back">返回</string>

    <string name="networt_connected">网络已连接</string>
    <string name="networt_disconnected">网络断开了</string>

    <string name="teacher_list_title">麻辣老师</string>

    <string name="load_more">加载更多</string>

    <string name="no_data">暂无数据</string>

	<string name="do_filter">筛选</string>
	
	<string name="currency_unit">元</string>

	<!-- 教师详情 -->
	<string name="sign_up_immediately">马上报名</string>
	<string name="teacher_teaching_subject">教授科目</string>
	<string name="teacher_teaching_tag">风格标签</string>
	<string name="teaching_environment">教学环境</string>
	<string name="teacher_highscore">提分榜</string>
	<string name="teacher_gallery">个人相册</string>
	<string name="teacher_more_gallery">更多</string>
	<string name="teacher_certificate">特殊成就</string>
	<string name="member_services">会员服务</string>
	<string name="teacher_level">教龄 级别</string>
	<string name="class_pricelist">价格表</string>
	<string name="highscore_name">姓 名</string>
	<string name="highscore_increasedscores">提分区间</string>
	<string name="highscore_school">所在学校</string>
	<string name="highscore_admittedto">考入学校</string>
	<string name="sign_up">报名</string>

    
    <string name="usercenter_touch_protocol">轻触上面验证按钮,即表示您同意</string>
    <string name="usercenter_user_agreement">麻辣教师用户协议</string>
    <string name="usercenter_set_student_succeed">设置学生姓名成功</string>
    <string name="usercenter_set_student_failed">设置学生姓名失败</string>
    <string name="usercenter_verify_code_sent">验证码已发送</string>
    <string name="seconds_count_down">%ds</string>
    <string name="usercenter_fetch_verify_code">获取验证码</string>
    <string name="usercenter_fetch_code_failed">验验证码发送失败，请稍候重试！</string>
    <string name="usercenter_verify">验证</string>

	<string name="user_protocol">《麻辣教户协议》</string>
    <string name="scholarship">奖学金</string>
    <string name="coupon_expired">已过期</string>
    <string name="coupon_not_use">未使用</string>
    <string name="pay">支付</string>

    <string name="picker_school">点击切换校区</string>
    <string name="current_city">当前城市</string>

    <string name="comment_succeed">评价成功!</string>
    <string name="comment_failed">评价失败!</string>
    <string name="load_user_info_failed">数据加载失败!</string>
    <string name="usercenter_student_empty">用户姓名不能为空!</string>
    <string name="usercenter_set_school_failed">学校设置失败!</string>
    <string name="usercenter_set_school_succeed">学校设置成功!</string>
    <string name="usercenter_school_empty">学校不能为空!</string>
    <string name="usercenter_set_avator_failed">头像设置失败!</string>
    <string name="usercenter_set_avator_succeed">头像设置成功!</string>

    <string name="usercenter_set_avator_failed_no_permission">您的头像不能修改!</string>

    <string name="home_get_teachers_fialed">教师信息加载失败,请检查网络</string>

    <string name="load_timetable_info_failed">课程表下载失败!</string>


    <!--Html.fromHtml("<font size=\"3\" color=\"red\">今天天气好吗？</font><font size=\"3\" color=\"green\">挺好的</font>"-->
    <string name="qr_code_pay_tip">
        <font color="#636363">家长完成支付后 点击</font>
        <font color="#6396b9">支付完成</font>
        <font color="#636363">按钮</font>
    </string>

    <string name="live_course_introduce_title">什么是双师直播？</string>
    <string name="live_course_introduce_title1">1+1 >2 模式</string>
    <string name="live_course_introduce_title2">一. 全国顶级名师1 ： 1实时在线直播授课</string>
    <string name="live_course_introduce_title3">二.专业助教全程跟踪辅导</string>

    <string name="live_course_introduce_content1">直播名师＋专业助教，全程为孩子的学习保驾护航！</string>
    <string name="live_course_introduce_content2">学生直接对接北京、上海、深圳等一线城市重点学校的学科带头人。真人等大的名师如亲临教室般与学生实时互动，通过监控系统即时关注到每位学生，现场答疑解惑，从而打破地域局限解决了中小城市与一线城市优质教育资源不对等的问题。</string>
    <string name="live_course_introduce_content3">助教全部选自当地专业老师，具有多年丰富的教学经验及良好的班级管理经验。方便学生及时查漏补缺及课后作业效果追踪，让学生同时享受两位老师的辅导，大幅度提升单位时间内的学习效率。</string>

    <string name="coming_soon">敬请期待</string>

    <string name="app_coupon_protocol">一.奖学金券是什么\n\n1.奖学金券是由麻辣老师发行，使用户在麻辣老师购买课程的过程中，作为抵扣现金的一种虚拟券。\n\n二.使用规则\n\n1.不同的奖学金券面值、有效期和使用限制不尽相同，使用前请认真核对。\n2.一个订单只能使用一张奖学金券。\n3.奖学金券作为一种优惠手段，无法获得对应的积分。\n4.一个订单中的奖学金券部分不能退款或折现，使用奖学金券购买的订单发生退款后不能返还奖学金券。\n5.如取消订单，订单中所使用的奖学金券可再次使用。\n6.奖学金券面值大于订单金额，差额不予退回；如奖学金券面值小于订单金额，需由用户支付差额；奖学金券不可兑现，且不开发票。\n\n三.特别提示\n\n1.用户应当出于合法、正当目的，以合理方式使用奖学金券。\n2.麻辣老师将不定期的通过版本更新的方式修改使用规则，请您及时升级为最新版本。\n3.如果用户对使用规则存在任何疑问或需要任何帮助，请及时与麻辣老师客服联系。联系电话：010-57733349\n4.最终解释权归北京麻辣在线网络科技有限公司所有。\n</string>
    <string name="app_version">版本 V2.0.0</string>
    <string name="app_company">COPYRIGHT&#169;2014-2016\n北京麻辣在线网络科技有限公司版权所有</string>
    <string name="app_protocol">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;麻辣老师(MALALAOSHI.COM)成立于2015年6月，由众多资深教育人士和互联网顶尖人才组成，是专注于国内二三四线城市中小学K12课外辅导的O2O服务平台，以效果、费用、便捷为切入口，实现个性化教学和学生的个性发展，推动二三四线城市及偏远地区教育进步。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;麻辣老师通过O2O的方式，以高效和精准的老师推荐，让中小学家长更加方便和经济地找到好老师，提升老师的收入，优化教、学、练、测、评五大环节, 提升教学与学习效率、创新服务模式，带给家长、老师及学生全新的学习体验。</string>
    <string name="course_expire_reserve">您在该时间段有课程未上完，直到您在该时间段课程全部结束后的12小时，我们都为您保留老师时间，方便您继续购买。</string>
    <string name="splash_message">先人一步\n人人可享优质教育</string>
    <string name="copy_right">copyright&#169;2015-2017</string>

    <string name="live_course_registered">已报：</string>
    <string name="live_course_unregistered">剩余名额：</string>
    <string name="live_course_disc">课程介绍</string>
    <string name="live_course_lecture">直播名师</string>
    <string name="live_course_buy">立即购买</string>
    <string name="live_course_over">已结束</string>
    <string name="live_course_paid">已购买</string>
    <string name="live_course_full">已 满</string>
    <string name="live_course_contact_assist">联系助教</string>
    <string name="live_course_consultation_text">对课程有疑问？快电话咨询助教老师吧！</string>

    <!--待删除-->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="your_topic_will_show_here">你课中答错的题目会出现在这里哦</string>
    <string name="look_over_the_sample_of_topic">查看错题本样本</string>
    <string name="wrong_topics_fetch_fail">错题本数据获取失败</string>
    <string name="retry_fetch">重新获取</string>
    <string name="loading">正在加载</string>
    <string name="report_only_support_math">学习报告目前只支持数学科目</string>
    <string name="look_the_report_samples">查看学习报告样本</string>
    <string name="learning_report_fetch_fail">学习报告数据获取失败</string>
    <string name="where_are_wrong_topic_comes">错题哪里来?</string>
    <string name="login_to_look_topic_report">登录可查看错题本和学习报告哦</string>
    <string name="login_immeditely">立即登录</string>
    <string name="member_exclusive">会员专享</string>
    <string name="network_error_pull_to_refresh_again">网络不给力，尝试下拉刷新</string>
    <string name="total">共&#12288;&#12288;计：¥</string>
    <string name="please_comment">老师讲的如何，真诚的评价可以让双师越来越好！50字哦~</string>

</resources>
