<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/teacher_body_margin_bottom"
        >
        <LinearLayout
            style="@style/LiveCourse"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                style="@style/LiveCourse.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    tools:text="小学新概念英语初级A班"
                    android:id="@+id/tv_live_course"
                    style="@style/LiveCourse_Card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    style="@style/LiveCourse_Card_line" />

                <LinearLayout
                    style="@style/LiveCourse_Card_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_course_type"
                        tools:text="20人小班"
                        android:textColor="@color/color_white_ffffff"
                        android:textSize="@dimen/text_size_small_high"
                        android:gravity="center"
                        android:paddingRight="@dimen/item_divider_height"
                        android:paddingLeft="@dimen/item_divider_height"
                        android:layout_marginLeft="@dimen/item_margin_big"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/item_live_height"
                        android:background="@drawable/bg_blue_rectangle_btn_normal"/>

                    <TextView
                        android:id="@+id/tv_grade_course"
                        tools:text="小学四-六年级"
                        android:textColor="@color/color_white_ffffff"
                        android:textSize="@dimen/text_size_small_high"
                        android:gravity="center"
                        android:paddingRight="@dimen/item_divider_height"
                        android:paddingLeft="@dimen/item_divider_height"
                        android:layout_marginLeft="@dimen/item_live_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/item_live_height"
                        android:background="@drawable/bg_blue_rectangle_btn_normal"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_course_date"
                    tools:text="2016/06/16-2016/08/16"
                    style="@style/LiveCourse_Card_content"
                    android:textColor="@color/color_black_636363"
                    android:drawableLeft="@drawable/ic_clock"
                    android:drawablePadding="@dimen/item_text_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_course_time"
                    tools:text="每周六10：30~12：30\n每周六10：30~12：30\n每周六10：30~12：30"
                    style="@style/LiveCourse_Card_content"
                    android:layout_marginLeft="@dimen/item_margin_big"
                    android:layout_marginRight="@dimen/item_margin_big"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:lineSpacingExtra="@dimen/item_text_padding"
                    android:textColor="@color/color_black_939393"
                    android:textSize="@dimen/text_size_small_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    style="@style/LiveCourse_Card_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/live_course_registered"
                        android:drawableLeft="@drawable/ic_registered"
                        android:drawablePadding="@dimen/item_text_padding"
                        android:textColor="@color/color_black_636363"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_stu_count"
                        tools:text="14人"
                        android:textColor="@color/color_red_e26254"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    tools:text="什么什么学校"
                    android:id="@+id/tv_school"
                    style="@style/order_detail_card_text_black_light"
                    android:textColor="@color/color_black_636363"
                    android:textSize="@dimen/text_size_normal"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:layout_below="@+id/tv_course_times"
                    android:drawableLeft="@drawable/ic_course_address_icon"
                    android:layout_marginRight="61dp"
                    android:drawablePadding="6dp"
                    />
                <TextView
                    tools:text="洛阳市什么什么区洛阳市什么什么区"
                    android:id="@+id/tv_address"
                    style="@style/order_detail_card_text_black_light"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/color_black_939393"
                    android:paddingBottom="6dp"
                    android:layout_below="@+id/tv_school"
                    android:layout_alignLeft="@+id/tv_school"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/item_text_left_padding"
                style="@style/LiveCourse.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/live_course_disc"
                    style="@style/LiveCourse_Card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    style="@style/LiveCourse_Card_line" />

                <TextView
                    android:id="@+id/tv_course_disc"
                    tools:text="课程介绍课程介绍课程介绍课程介绍课程介绍课程介绍课程介绍课程介绍课程介绍课程介绍课程介绍课程介绍课程介绍课程介绍"
                    style="@style/LiveCourse_Card_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/color_black_939393"
                    android:lineSpacingExtra="@dimen/item_text_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RelativeLayout
                style="@style/LiveCourse.Card"
                android:layout_marginTop="@dimen/item_text_left_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/live_course_lecture"
                    android:id="@+id/tv_live"
                    style="@style/LiveCourse_Card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:id="@+id/view_line"
                    android:layout_below="@+id/tv_live"
                    style="@style/LiveCourse_Card_line" />

                <TextView
                    tools:text="刘冠奇"
                    android:id="@+id/tv_lecturer_name"
                    style="@style/LiveCourse_Card_content"
                    android:textColor="#9bc3e1"
                    android:drawableLeft="@drawable/ic_avatar_icon"
                    android:drawablePadding="@dimen/item_text_padding"
                    android:layout_marginBottom="@dimen/item_text_left_padding"
                    android:layout_below="@+id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_lecture_honorary"
                    tools:text="直播名师直播名师直播名师直播名师直播名师直播名师直播名师直播名师直播名师直播名师直播名师直播名师"
                    style="@style/LiveCourse_Card_content"
                    android:textColor="@color/color_black_939393"
                    android:lineSpacingExtra="@dimen/item_text_left_padding"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="@dimen/item_margin_big"
                    android:paddingRight="@dimen/layout_margin_left"
                    android:layout_toLeftOf="@+id/iv_leature_avatar"
                    android:drawablePadding="@dimen/item_text_padding"
                    android:layout_below="@+id/tv_lecturer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.malalaoshi.android.core.image.MalaImageView
                    android:id="@+id/iv_leature_avatar"
                    android:layout_below="@+id/tv_lecturer_name"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_default_teacher_avatar"
                    android:layout_width="@dimen/course_time_height"
                    android:layout_height="@dimen/course_time_height"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/teacher_body_margin_bottom"
        android:paddingTop="1px"
        android:gravity="center_vertical"
        android:background="@color/color_gray_dadada"
        >
        <TextView
            android:id="@+id/tv_course_price"
            tools:text="￥480/16次"
            style="@style/LiveCourse_button"
            android:textSize="@dimen/text_size_xxlarge"
            android:textColor="@color/color_red_e26254"
            android:background="@color/color_white_ffffff"/>

        <TextView
            android:id="@+id/tv_buy_course"
            android:text="@string/live_course_buy"
            style="@style/LiveCourse_button"
            android:textSize="@dimen/text_size_large_high"
            android:textColor="@color/color_white_ffffff"
            android:background="@drawable/bg_blue_rectangle_btn"/>
    </LinearLayout>
</FrameLayout>